--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 </head>
 <body>
     <div class="game-content"></div>
-    <script type="module" src="./js/main.js"></script>
+    <script type="module" src="./js/functions/Running/jump.js"></script>
 </body>
 </html>
